fix header buttons on mobile

--- a/src/components/HeroButtons/styles.module.css
+++ b/src/components/HeroButtons/styles.module.css
@@ -14,7 +14,8 @@
     text-transform: uppercase;
     cursor: pointer;
     color: #fff;
-    min-width: 128px;
+    max-width: 128px;
+    width: 128px;
     z-index: 10;
     text-align: center;
     text-decoration: none;
@@ -38,6 +39,13 @@
 .heroDocsBtn {
     background: transparent;
     border: 1px solid #FFF;
+}
+
+
+@media screen and (max-width: 500px) {
+    .heroDocsBtn.hideIfMobile{
+        display: none;
+    }
 }
 
 .heroLightStar1 {
